# crew_2

./: README.md  ai_articles.db  orginial_agents_tasks.yml  pyproject.toml  uninstall_packages.py
db/: chroma.sqlite3
src/crew_2/: crew.py  db_sqlite.py  main.py  scraper.py
src/crew_2/config/: agents.yaml  tasks.yaml
src/crew_2/tools/: custom_tool.py
