[tool.poetry]
name = "crew_2"
version = "0.1.0"
description = "crew_2 using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.36.1" }

[tool.poetry.scripts]
crew_2 = "crew_2.main:run"
train = "crew_2.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
